# chassis-ros2-driver

./: .gitignore  README.md
chassis_bringup/: package.xml  setup.py
chassis_bringup/config/: vehicle_param_DD-S.yaml
chassis_bringup/launch/: bringup.launch.py
chassis_description/: CMakeLists.txt  package.xml
chassis_description/config/: joint_names_chassis.yaml
chassis_description/launch/: display.launch.py  gazebo.launch.py
chassis_description/meshes/DD-S/: base_link.STL  wheel_front_left_link.STL  wheel_rear_left_link.STL  wheel_rear_right_link.STL
chassis_description/rviz/: static_view.rviz
chassis_description/urdf/: chassis_DD-S.xacro
chassis_driver/: package.xml  setup.py
chassis_driver/chassis_driver/: chassis_driver_node.py  kinematics.py  serial_io.py
chassis_driver/test/: test_kinematic.py
chassis_msgs/: CMakeLists.txt  package.xml
chassis_msgs/msg/: MotorState.msg
